welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:27: error: type mismatch;
 found   : Int
 required: Boolean
    if (getX() + 1 > 0 && getY() - 1)
                                 ^