welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
def fin():Boolean = 
{
  var ok = false
  
  droite()
  if (estFaceMur())
  {
    droite()
    if (estFaceMur())
    	ok = true
    gauche()
  }
  gauche()
  
  return ok
}

override def run() {
  var diag = 0
  var idCase = 0
  ecritMessage("" + idCase)
  
  //while (!fin())
  {
    var xPos = 0
    var yPos = 0
    
    if (getX() + 1 > 0 && getY() - 1)
    {
      if (diag < 6)
      {
        xPos = 0
        yPos = diag + 1
      }
      else
      {
        xPos = diag + 1 - 8
        yPos = 6
        setPos(diag + 1 - 8, 6)
      }

      if (xPos > 6 || xPos < 0 || yPos > 6 || yPos < 0)
      {
        diag += 1
        setPos(xPos, yPos)
      }
    }
    else
    	setPos(getX() + 1, getY() - 1)
    
    idCase += 1
    ecritMessage("" + idCase)
  }
}